--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -49,7 +49,7 @@
         var series = [{
             name: "Total Visits",
             data: [56000, 63000, 74000, 91000, 117000, 138000],
-
+			color: "red",
             // Line chart marker type
             markers: { type: "square" }
         }, {
